# RAG-Powered-Email-Support-Triage

./: .env  .gitignore  Dockerfile  README.md  check_queue.py  docker-compose.yml  fly.toml  pyproject.toml  render.yml  requirements.txt
app/: create_admin.py  main.py  seed_kb.py
app/api/admin/: routes.py
app/api/webhooks/: resend.py
app/auth/: dependencies.py  routes.py  security.py
app/core/: celery_app.py  redis.py  tasks.py  worker.py
app/db/: models.py  session.py
app/services/: email_service.py  embedding_service.py  rag_service.py  reranking_service.py
app/tests/: test_email_pipeline.py  test_rag_service.py  test_reranker.py
templates/: dashboard.html  login.html  ticket_detail.html
