[project]
name = "support-triage-platform"
version = "0.1.0"
dependencies = [
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi>=0.128.8",
    "jinja2>=3.1.6",
    "openai>=2.37.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "redis>=7.0.1",
    "requests>=2.32.5",
    "resend>=2.30.1",
    "sqlalchemy>=2.0.49",
    "svix>=1.93.0",
    "uvicorn>=0.39.0",
]
